<resources>
    <string name="app_name">EndisInstagram</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="enter_a_description">Enter a description...</string>
    <string name="submit_picture">Submit Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="log_in">LOG IN</string>
</resources>
