<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:ems="12"
        android:hint="@string/enter_a_description"
        android:inputType="none" />


    <Button
        android:id="@+id/btnCapture"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSubmit"
        android:layout_marginEnd="31dp"
        android:text="@string/take_picture" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="141dp"
        android:layout_marginStart="49dp"
        android:text="@string/submit_picture" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bottom_border_grey"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways">
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemBackground="@drawable/top_border"
        app:itemIconTint="@color/black_80_transparent"
        app:itemTextColor="@color/black_80_transparent"
        app:menu="@menu/menu_bottom_navigation" />


</RelativeLayout>